# artemisc

./: .gitignore  README.md  build.sh  docker-compose.yml  index.js  package-lock.json  package.json  render.yaml  start.js
client/: capacitor.config.ts  index.html  package.json  tsconfig.json  vite.config.ts
client/src/: App.tsx  index.css
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src/lib/: api.ts  socket.ts
client/src/pages/: ChatView.tsx  Chats.tsx  Contacts.tsx  Login.tsx  Register.tsx  Settings.tsx
client/src/stores/: authStore.ts  callStore.ts  chatStore.ts
client/src/types/: index.ts
server/: .env.example  Dockerfile  package.json  tsconfig.json
server/prisma/: schema.prisma  seed.ts
server/src/: app.ts  index.ts
server/src/plugins/: websocket.ts
server/src/routes/: auth.ts  chats.ts  contacts.ts  messages.ts  users.ts
server/src/services/: auth.ts  chat.ts  message.ts
